<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Card Game App</string>
    <string name="title_activity_home">Card Game App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="to_table">TO TABLE</string>
    <string name="trade">TRADE</string>
    <string name="table">TABLE</string>
    <string name="deck">DECK</string>
    <string name="title_activity_hand">HandActivity</string>
    <string name="host_game">Host Game</string>
    <string name="join_game">Join Game</string>
    <string name="card_game_app">Card Game App</string>
    <string name="title_activity_host_game">HostGameActivity</string>
    <string name="back">Back</string>
    <string name="start_game">Start \nGame</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="trash">TRASH</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="to_hand">TO HAND</string>

</resources>
