<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gfarcasiu.cardgameapp.HomeActivity"
    android:orientation="vertical"
    android:background="@drawable/felt">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal"
        android:weightSum="6"
        android:gravity="center|center_horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/GameButton"
            android:text="@string/deck" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/GameButton"
            android:text="@string/table" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/GameButton"
            android:text="@string/trade" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="horizontal"
        android:weightSum="7"
        android:gravity="center">
        <ImageView
            style="@style/playing_card"
            android:background="@drawable/c_1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="horizontal"
        android:gravity="end"
        android:weightSum="6" >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/GameButton"
            android:text="@string/to_table" />
    </LinearLayout>
</LinearLayout>