<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gfarcasiu.cardgameapp.HomeActivity"
    android:orientation="vertical"
    android:background="@drawable/felt" >
    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/card_game_app"
            android:textSize="50sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#faebd7" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ControlFlowButton"
            android:text="@string/host_game"
            android:onClick="hostGame"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/ControlFlowButton"
            android:layout_weight="1"
            android:text="@string/join_game"
            android:onClick="joinGame"/>
    </LinearLayout>
</LinearLayout>
